# dados-academicos

./: README.md  pyproject.toml  scrapper.py  tempCodeRunnerFile.py
