[tool.poetry]
name = "xorume"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
bs4 = "^0.0.1"
pydantic = "^2.4.2"
pandas = "^2.1.2"
tqdm = "^4.66.1"


[tool.poetry.group.develop.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
